[project]
name = "as-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.10",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pathlib>=1.0.1",
    "pillow>=11.2.0",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
