[project]
name = "as-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=0.3.10",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pathlib>=1.0.1",
    "pillow>=11.2.0",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
